# vassouras-II

./: .gitignore  README.md  pyproject.toml
migrations/: env.py
migrations/versions/: e5d92cbeb165_create_table_cadastro_usuarios.py
tests/: conftest.py  test_app.py  test_models.py  test_routes.py  test_security.py  test_utilitarios.py
vassouras_ii/: app.py  database.py  login.py  models.py  routers.py  security.py  settings.py  utilitarios.py
vassouras_ii/static/css/: notificacao.css  style.css
vassouras_ii/static/js/: notificacao.js
vassouras_ii/templates/: empresas.html  home.html  login.html  master.html
